syntax = "proto3";

package proto.v1;

import "validate/validate.proto";

option go_package = "echo-me/gen/proto/v1;slotv1";

message SaveSlotRequest {
  int64 id = 1 [(validate.rules).int64.gt = 0];
  string name = 2;
  string email = 3;
}

message SaveSlotResponse {
  int64 id = 1;
}

service SlotService {
  rpc SaveSlot(SaveSlotRequest) returns (SaveSlotResponse) {}
}